--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,11 +1,15 @@
+/* RESET + GATBY BOILERPLATE */
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+
 body {
   margin: 0;
 }
+
 article,
 aside,
 details,
@@ -19,55 +23,68 @@ section,
 summary {
   display: block;
 }
+
 audio,
 canvas,
 progress,
 video {
   display: inline-block;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 progress {
   vertical-align: baseline;
 }
+
 [hidden],
 template {
   display: none;
 }
+
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
+
 a:active,
 a:hover {
   outline-width: 0;
 }
+
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
   text-decoration: underline dotted;
 }
+
 b,
 strong {
   font-weight: inherit;
   font-weight: bolder;
 }
+
 dfn {
   font-style: italic;
 }
+
 h1 {
   font-size: 2em;
-  margin: .67em 0;
+  margin: 0.67em 0;
 }
+
 mark {
   background-color: #ff0;
   color: #000;
 }
+
 small {
   font-size: 80%;
 }
+
 sub,
 sup {
   font-size: 75%;
@@ -75,18 +92,23 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
+
 sub {
-  bottom: -.25em;
+  bottom: -0.25em;
 }
+
 sup {
-  top: -.5em;
+  top: -0.5em;
 }
+
 img {
   border-style: none;
 }
+
 svg:not(:root) {
   overflow: hidden;
 }
+
 code,
 kbd,
 pre,
@@ -94,14 +116,17 @@ samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
+
 figure {
   margin: 1em 40px;
 }
+
 hr {
   box-sizing: content-box;
   height: 0;
   overflow: visible;
 }
+
 button,
 input,
 optgroup,
@@ -110,41 +135,49 @@ textarea {
   font: inherit;
   margin: 0;
 }
+
 optgroup {
   font-weight: 700;
 }
+
 button,
 input {
   overflow: visible;
 }
+
 button,
 select {
   text-transform: none;
 }
-[type=reset],
-[type=submit],
+
+[type='reset'],
+[type='submit'],
 button,
-html [type=button] {
+html [type='button'] {
   -webkit-appearance: button;
 }
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner,
+
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner,
 button::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring,
+
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring,
 button:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
+
 fieldset {
   border: 1px solid silver;
   margin: 0 2px;
-  padding: .35em .625em .75em;
+  padding: 0.35em 0.625em 0.75em;
 }
+
 legend {
   box-sizing: border-box;
   color: inherit;
@@ -153,36 +186,46 @@ legend {
   padding: 0;
   white-space: normal;
 }
+
 textarea {
   overflow: auto;
 }
-[type=checkbox],
-[type=radio] {
+
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
-[type=search] {
+
+[type='search'] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
-[type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
+
+[type='search']::-webkit-search-cancel-button,
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+
 ::-webkit-input-placeholder {
   color: inherit;
-  opacity: .54;
+  opacity: 0.54;
 }
+
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font: inherit;
 }
+
+/* GENERAL PAGE STYLING */
+
 .App {
-  background-image: url('./asteroids.jpg');
+  background-image: url('./shattered-island.gif');
   text-align: center;
 }
 
@@ -192,24 +235,24 @@ textarea {
 }
 
 h1 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 100;
 }
 
 h2 {
   font-size: 50px;
   line-height: 10px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 100;
 }
 
 h3 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 800;
 }
 
 p {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
 }
 
@@ -234,7 +277,7 @@ p {
   display: block;
   width: 100%;
   height: auto;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .overlay {
@@ -243,11 +286,11 @@ p {
   left: 0;
   right: 0;
   background-color: white;
-  opacity: .9;
+  opacity: 0.9;
   overflow: hidden;
   width: 100%;
   height: 0;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .item:hover .overlay {
@@ -264,7 +307,7 @@ p {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .3s ease;
+  transition: 0.3s ease;
   background-color: #bafffc;
   border-radius: 5px;
 }
@@ -297,18 +340,23 @@ p {
 }
 
 .heading {
-  /*margin-top: 50px;*/
+  color: white;
 }
+
+/* WELCOME CSS */
 
 .Welcome {
   display: flex;
-  background-color: #FFF;
-  height: 80vh;
+  background-color: rgba(255, 255, 255);
+  height: 75vh;
   padding-left: 75px;
   padding-right: 75px;
   align-items: center;
-  /*text-align: center;*/
+  /* vert */
+  text-align: start;
+  /* container */
   justify-content: center;
+  /* horr */
 }
 
 .Welcome .i-hov {
@@ -324,12 +372,12 @@ p {
   display: inline-block;
 }
 
-.Welcome button {
-  font-family: "Montserrat", sans-serif;
+button {
+  font-family: 'Montserrat', sans-serif;
   background-color: white;
   color: black;
   border: 2px solid black;
-  border-radius: 3px;
+  border-radius: 30px;
   padding: 15px 50px;
   text-align: center;
   text-decoration: none;
@@ -341,25 +389,15 @@ p {
   cursor: pointer;
 }
 
-.Welcome button:hover {
+button:hover {
   background-color: #00f2e7;
   border: 2px solid;
   border-color: #00f2e7;
   color: white;
 }
 
-.down-arrow {
-  background-color: white;
-}
-
-.main-pic {
-  border-radius: 50%;
-  width: 28vw;
-  padding: 20px;
-}
-
 .welcome-intro {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 100;
 }
 
@@ -367,64 +405,11 @@ p {
   font-weight: 900;
 }
 
-.weatherIcon {
-  width: 30px;
-}
-
 .Projects {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
-.Blog {
-  background-color: #FFF;
-}
-
-.Teaching {
-  background-color: #FFF;
-}
-
-.About {
-  background-image: url(./jumbo.jpg);
-  background-repeat: no-repeat;
-  background-size: 1500px;
-  background-position: bottom;
-  height: 700px;
-}
-
-.about-intro {
-  font-family: "Raleway", sans-serif;
-  font-weight: 100;
-  color: white;
-  font-size: 40px;
-}
-
-.about-intro strong {
-  font-weight: 900;
-  color: white;
-}
-
-.about-item a {
-  color: white;
-  text-decoration: none;
-}
-
-.about-item {
-  font-family: "Raleway", sans-serif;
-  font-weight: 200;
-  font-size: 20px;
-  color: white;
-  padding: 10px 40px;
-}
-
-.about-item strong {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  color: white;
-}
-
-.About span {
-  text-decoration: underline;
-}
+/* HEADER + NAV */
 
 .NavBar {
   list-style-type: none;
@@ -434,13 +419,13 @@ p {
   padding: 0;
   overflow: hidden;
   text-align: center;
-  /*border: 1px solid #e7e7e7;*/
+  border: 1px solid #e7e7e7;
   background-color: #f1f1f1;
   z-index: 500;
 }
 
 .nav-item {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   float: right;
 }
@@ -450,7 +435,7 @@ p {
 }
 
 .nav-name {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 100;
   font-size: 36px;
   display: block;
@@ -474,13 +459,73 @@ p {
 
 .nav-link:hover:not(.active) {
   background-color: #bafffc;
-  color: #16223C;
+  color: #16223c;
 }
 
 .nav-link.active {
   color: white;
-  background-color: #4CAF50;
+  background-color: #4caf50;
 }
+
+/* ABOUT */
+
+.About {
+  display:flex;
+  flex-direction: row-wrap;
+}
+
+.about-intro {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  color: white;
+  font-size: 40px;
+}
+
+.about-intro strong {
+  font-weight: 900;
+  color: white;
+}
+
+.about-content {
+  min-width: 300px;
+  flex: 2;
+}
+
+.about-content:nth-child(2) {
+  min-width: 300px;
+  flex: 1;
+}
+
+
+.about-item a {
+  color: white;
+  text-decoration: none;
+}
+
+.about-item {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  color: white;
+  padding: 10px 40px;
+}
+
+.about-item strong {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  color: white;
+}
+
+.About span {
+  text-decoration: underline;
+}
+
+.profile {
+  height: auto;
+  width: auto;
+  border-radius: 50%;
+}
+/* FOOTER */
 
 .Footer {
   list-style-type: none;
@@ -500,9 +545,9 @@ p {
   text-align: center;
 }
 
-.Footer img {
+.Footer {
   padding: 15px 0px;
-  width: 100%
+  width: 100%;
 }
 
 .Footer a {
@@ -515,4 +560,7 @@ p {
 .Footer h3 {
   font-size: 30px;
   line-height: 10px;
+}
+.footer-full {
+  grid-column: 2 / span 2;
 }
