--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -269,8 +269,9 @@ p {
 
 .item {
   position: relative;
-  width: 40%;
-  margin: 10px;
+  max-width: 30vw;
+  min-width: 200px;
+  margin: 0;
 }
 
 .thumb {
@@ -348,6 +349,11 @@ p {
 .Welcome {
   display: flex;
   background-color: rgba(255, 255, 255);
+  background: url('./mountainsBW.gif') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 75vh;
   padding-left: 75px;
   padding-right: 75px;
@@ -383,7 +389,6 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-  margin: 10px 10px;
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
@@ -416,11 +421,10 @@ button:hover {
   width: 100%;
   position: fixed;
   margin: 0;
-  padding: 0;
   overflow: hidden;
   text-align: center;
   border-bottom: 2px solid #000000;
-  background-color: #272830;
+  background-color: #272830cb;
   z-index: 500;
 }
 
@@ -431,7 +435,7 @@ button:hover {
 }
 
 .nav-last {
-  margin-right: 60px;
+  margin-right: 50px;
 }
 
 .nav-name {
@@ -539,9 +543,14 @@ button:hover {
   background: -webkit-linear-gradient(to right, #bafffc, #f1f1f1);
   background: linear-gradient(to right, #bafffc, #f1f1f1);
   display: grid;
-  grid-template-columns: 10% 30% 50% 10%;
+  grid-template-columns: 15% 40% 30% 15%;
 }
-
+.footer-1{
+  grid-column: 2 / span 1;
+}
+.footer-2 {
+  grid-column: 3 / span 1;
+}
 .Footer div {
   text-align: center;
 }
@@ -562,6 +571,7 @@ button:hover {
   font-size: 30px;
   line-height: 10px;
 }
+
 .footer-full {
   grid-column: 2 / span 2;
 }
