--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -269,86 +269,6 @@ p {
   padding: 50px;
 }
 
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.item {
-  position: relative;
-  max-width: 30vw;
-  min-width: 200px;
-  margin: 0;
-}
-
-.thumb {
-  display: block;
-  width: 100%;
-  height: auto;
-  transition: 0.5s ease;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  right: 0;
-  background-color: white;
-  opacity: 0.9;
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: 0.5s ease;
-}
-
-.item:hover .overlay {
-  bottom: 0;
-  height: 100%;
-}
-
-.blog-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.3s ease;
-  background-color: #bafffc;
-  border-radius: 5px;
-}
-
-.item:hover .blog-overlay {
-  height: 100%;
-  opacity: 1;
-}
-
-.item:hover .thumb {
-  width: 100%;
-  height: auto;
-}
-
-.text {
-  white-space: nowrap;
-  color: black;
-  font-size: 25px;
-  position: absolute;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-.text a {
-  color: #00c8c8;
-  text-decoration: none;
-}
-
 .heading {
   font-family: 'Oswald';
   color: white;
@@ -423,9 +343,6 @@ button:hover {
   font-weight: 900;
 }
 
-.Projects {
-  background-color: #fff;
-}
 
 /* HEADER + NAV */
 
@@ -442,8 +359,10 @@ button:hover {
 }
 
 .nav-item {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Oswald',
+  sans-serif;
   font-weight: 300;
+  font-stretch: expanded;
   float: right;
 }
 
@@ -467,6 +386,7 @@ button:hover {
 
 .nav-link {
   display: block;
+  font-stretch: expanded;
   color: #ffffff;
   text-align: center;
   padding: 20px 20px;
@@ -484,6 +404,105 @@ button:hover {
   color: white;
   background-color: #4caf50;
 }
+
+/* PROJECTS */
+
+.Projects {
+  background-color: rgb(219, 250, 255);
+  margin: 0;
+  padding: 0;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 250px;
+  margin: 10px 0;
+  padding: 0;
+  border: #000 solid 1px;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  align-content: center;
+}
+
+.thumb {
+  width: 25em;
+}
+
+.item:hover {
+  border: #fff solid 1px;
+  opacity: 0.9;
+  height: 280px;
+  width: auto;
+  margin: 0;
+  padding: 0;
+  -webkit-filter: grayscale(0.1);
+  filter: grayscale(0.1);
+  transition: 0.5s ease;
+}
+
+.text {
+  color: black;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50em;
+  vertical-align: baseline;
+  padding: 1em 2em 1em 2em;
+}
+
+.text a {
+  color: #00c8c8;
+  text-decoration: none;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+.text>ul {
+  display: flex;
+  flex-direction: row;
+}
+/*
+
+.item:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+.blog-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+  background-color: #bafffc;
+  border-radius: 5px;
+}
+
+.item:hover .blog-overlay {
+  height: 100%;
+  opacity: 1;
+}
+
+.item:hover .thumb {
+  width: 100%;
+  height: auto;
+} */
+
 
 /* ABOUT */
 
