:art: styles and css heirarchy on projects. new logo overlays. edits to modules.

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -420,44 +420,56 @@ button:hover {
   justify-content: space-around;
 }
 
-.item {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 250px;
-  margin: 10px 0;
-  padding: 0;
-  border: #000 solid 1px;
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
-  align-content: center;
-}
+/* PROJECT OVERLAY */
 
+.item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 250px;
+    margin: 10px 0;
+    padding: 0;
+    /* border: #000 solid 1px; */
+    align-content: center;
+    position: relative;
+  }
+  
 .thumb {
   width: 25em;
+  -webkit-filter: blur(2px) grayscale(1) brightness(0.4);
+  filter: blur(2px) grayscale(1) brightness(0.4);
 }
 
-.item:hover {
-  border: #fff solid 1px;
-  opacity: 0.9;
-  height: 280px;
-  width: auto;
-  margin: 0;
-  padding: 0;
-  -webkit-filter: grayscale(0.1);
-  filter: grayscale(0.1);
+.item:hover,
+.thumb:hover {
+  opacity: 1;
+  -webkit-filter: grayscale(0) blur(0) brightness(1);
+  filter: grayscale(0) blur(0) brightness(1);
   transition: 0.5s ease;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  overflow: hidden;
+  height: 90%;
+  transition: .5s ease;
+}
+
+.item:hover .overlay {
+  bottom: 100%;
+  height: 0;
 }
 
 .text {
   color: black;
   font-size: 20px;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  width: 50em;
   vertical-align: baseline;
-  padding: 1em 2em 1em 2em;
+  padding: 2em 1em;
 }
 
 .text a {
@@ -473,36 +485,6 @@ ul li {
   display: flex;
   flex-direction: row;
 }
-/*
-
-.item:hover .overlay {
-  bottom: 0;
-  height: 100%;
-}
-.blog-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.3s ease;
-  background-color: #bafffc;
-  border-radius: 5px;
-}
-
-.item:hover .blog-overlay {
-  height: 100%;
-  opacity: 1;
-}
-
-.item:hover .thumb {
-  width: 100%;
-  height: auto;
-} */
-
 
 /* ABOUT */
 
