--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:200,400,700|Montserrat|Raleway|Roboto');
 /* RESET + GATBY BOILERPLATE */
-
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -224,9 +223,6 @@ textarea {
 }
 
 /* GENERAL PAGE STYLING */
-
-
-
 .App {
   background-image: url('./shattered-island.gif');
   text-align: center;
@@ -276,7 +272,6 @@ p {
 }
 
 /* WELCOME CSS */
-
 .Welcome {
   display: flex;
   background-color: rgba(255, 255, 255);
@@ -343,9 +338,7 @@ button:hover {
   font-weight: 900;
 }
 
-
 /* HEADER + NAV */
-
 .NavBar {
   list-style-type: none;
   width: 100%;
@@ -361,8 +354,7 @@ button:hover {
 .nav-item {
   font-family: 'Oswald',
   sans-serif;
-  font-weight: 300;
-  font-stretch: expanded;
+  font-weight: 400;
   float: right;
 }
 
@@ -376,12 +368,15 @@ button:hover {
   font-size: 36px;
   display: block;
   position: fixed;
-  margin-left: 60px;
   color: black;
   text-align: center;
-  padding: 7px 8px;
+  padding: 7px 0px;
   text-decoration: none;
   float: left;
+  max-height: 100px; 
+  border-radius: 10px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
 
 .nav-link {
@@ -406,7 +401,6 @@ button:hover {
 }
 
 /* PROJECTS */
-
 .Projects {
   background-color: rgb(219, 250, 255);
   margin: 0;
@@ -421,15 +415,13 @@ button:hover {
 }
 
 /* PROJECT OVERLAY */
-
 .item {
     display: flex;
     flex-direction: row;
     justify-content: center;
     height: 250px;
-    margin: 10px 0;
+    margin: 10px 0 ;
     padding: 0;
-    /* border: #000 solid 1px; */
     align-content: center;
     position: relative;
   }
@@ -487,15 +479,18 @@ ul li {
 }
 
 /* ABOUT */
-
 .About {
   display:flex;
-  flex-direction: row-wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: stretch;
 }
 
 .about-intro {
   font-family: 'Montseurat', sans-serif;
-  font-weight: 150;
+  font-weight: 400;
   color: white;
   font-size: 45px;
 }
@@ -505,14 +500,8 @@ ul li {
   color: white;
 }
 
-.about-content {
-  min-width: 300px;
+.about-content:first-child {
   flex: 2;
-}
-
-.about-content:nth-child(2) {
-  min-width: 300px;
-  flex: 1;
 }
 
 .about-item a {
@@ -525,7 +514,7 @@ ul li {
   font-weight: 200;
   font-size: 20px;
   color: white;
-  padding: 10px 40px;
+  padding: 10px 0;
 }
 
 .about-item strong {
@@ -538,14 +527,18 @@ ul li {
   text-decoration: underline;
 }
 
+.about-content:last-child {
+  min-width: 300px;
+  flex: 1;
+}
+
 .profile {
-  height: auto;
-  width: auto;
+  max-width: 100%;
   border-radius: 50%;
+  min-width: 300px;
 }
 
 /* FOOTER */
-
 .Footer {
   list-style-type: none;
   width: 100%;
@@ -553,9 +546,9 @@ ul li {
   text-align: center;
   align-items: center;
   z-index: 500;
-  background: #bafffc;
-  background: -webkit-linear-gradient(to right, #bafffc, #f1f1f1);
-  background: linear-gradient(to right, #bafffc, #f1f1f1);
+  background: #bafffc01;
+  background: -webkit-linear-gradient(to right, #bafffc90, #f1f1f150);
+  background: linear-gradient(to right, #bafffc90, #f1f1f150);
   display: grid;
   grid-template-columns: 15% 40% 30% 15%;
 }
@@ -591,4 +584,25 @@ ul li {
 
 .footer-full {
   grid-column: 2 / span 2;
+}
+
+/*Smartphone*/
+@media (max-width: 510px) {
+  .NavBar {
+    float: none;
+    width: 100%;
+  }
+  .nav-name {
+    max-height: 60px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+  }
+  .nav-link {
+    text-align: right;
+    padding: 10px 10px;
+    text-decoration: none;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    font-weight: 200;
+  }
 }
