:zap: Resume Updates

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -223,6 +223,7 @@ textarea {
 }
 
 /* GENERAL PAGE STYLING */
+/* Next Round Colors to add: bafffc-16223c-42454e-ffe260-dcc48e */
 .App {
   background-image: url('./shattered-island.gif');
   text-align: center;
